fix input text color, fix card width in process,add sides padding to vision, centered content on small dimension in message & contact, centered heading in testimonials

--- a/src/styles/_contact.scss
+++ b/src/styles/_contact.scss
@@ -49,5 +49,16 @@
 @media (max-width: 530px) {
   .contact {
     width: 260px;
+    text-align: center;
+
+    &__media {
+      margin: auto;
+    }
+  }
+}
+
+@media (max-width: 330px) {
+  .contact {
+    width: 200px;
   }
 }
