--- a/src/styles/_expertise.scss
+++ b/src/styles/_expertise.scss
@@ -5,6 +5,7 @@
   &__container {
     max-width: 1100px;
     margin: 140px auto;
+    padding: 0 30px;
   }
 
   &__heading {
