--- a/src/styles/_message.scss
+++ b/src/styles/_message.scss
@@ -16,6 +16,7 @@
     border-bottom: 1px solid #fff;
     margin-bottom: 45px;
     caret-color: #fff;
+    font-weight: 600;
 
     &:focus {
       border-color: #ff9c8e;
@@ -36,10 +37,29 @@
 
 @media (max-width: 530px) {
   .message {
+    &__heading {
+      text-align: center;
+    }
+
     &__email,
     &__name,
     &__message {
-      max-width: 240px;
+      max-width: 280px;
+      margin: 0 auto 45px;
+    }
+
+    &__button {
+      margin: auto;
+    }
+  }
+}
+
+@media (max-width: 330px) {
+  .message {
+    &__email,
+    &__name,
+    &__message {
+      max-width: 220px;
     }
   }
 }
