--- a/src/styles/_process.scss
+++ b/src/styles/_process.scss
@@ -28,10 +28,14 @@
   .process__process-info {
     margin-bottom: 60px;
   }
+
+  .process__cards {
+    grid-template-columns: minmax(1fr, 1fr);
+  }
 }
 
-@media (max-width: $small-screen-breakpoint) {
+@media (max-width: 650px) {
   .process__cards {
-    grid-template-columns: 1fr;
+    grid-template-columns: 264px;
   }
 }
