--- a/src/styles/_resets.scss
+++ b/src/styles/_resets.scss
@@ -25,6 +25,7 @@ input,
 textarea {
   font-family: Poppins, sans-serif;
   font-weight: bold;
+  color: #fff;
 }
 
 a {
