--- a/src/styles/_testimonials.scss
+++ b/src/styles/_testimonials.scss
@@ -8,6 +8,7 @@
     font-size: 13px;
     letter-spacing: 3px;
     text-transform: uppercase;
+    text-align: center;
     color: #c0cdd7;
     margin-bottom: 16px;
   }
@@ -16,7 +17,8 @@
     @include heading-font;
     max-width: 200px;
     font-size: 32px;
-    margin-bottom: 85px;
+    text-align: center;
+    margin: 0 auto 85px;
   }
 
   &__person-container {
