--- a/src/styles/_vision.scss
+++ b/src/styles/_vision.scss
@@ -2,7 +2,7 @@
 
 .vision {
   position: relative;
-  padding: 200px 0;
+  padding: 200px 30px;
   background-color: #fff;
 
   &__heading {
